# FuncToWeb

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
docs/: api_doc.md  boolean.md  color.md  config.md  datetime.md  embed.md  files.md  index.md  lists.md  numeric.md  optional.md  outputs.md  params.md
docs/features/: api-docs.md  configuration.md  dark-mode.md  embed.md  multiple-functions.md  url-prefill.md
docs/inputs/: boolean.md  color.md  composition.md  datetime.md  dropdown.md  files.md  lists.md  numeric.md  optional.md  params.md  string.md
docs/outputs/: index.md
examples/: README.md
examples/10_params/: 05_validation.py  README.md
examples/11_multiple/: 02_groups.py  README.md
examples/12_config/: README.md
examples/13_config/: 04_static_frontend.py
examples/13_recipes/: 06_admin_subprocess.py  README.md
examples/14_recipes/: 06_admin_subprocess.py
func_to_web/: __init__.py  builder.py  call_function.py  constants.py  models.py  normalization.py  process_result.py  route_handlers.py  routes.py  run.py  types.py
func_to_web/core/: constants.py  docs.py  normalization.py  return_file_handler.py  save_file_handler.py  server.py  utils.py
func_to_web/execution/: call_function.py  print_capture.py  process_result.py  table.py
func_to_web/files/: return_file_handler.py  save_file_handler.py
func_to_web/rendering/: builder.py  docs.py
func_to_web/serving/: route_handlers.py  routes.py  server.py
func_to_web/templates/: base.html  form.html  index.html  navigation.html  page.html  theme-toggle.html
(+17 files in other folders)
